# lab05

./: CMakeLists.txt  README.md
.github/workflows/: biuld.yml  build.yml  ci.yml  cmake.yml
banking/: Transaction.cpp
tests/: CMakeLists.txt  test.cpp
